[gd_scene load_steps=9 format=2]

[ext_resource path="res://scene/actor/ghost_2/ghost_2.gd" type="Script" id=1]
[ext_resource path="res://scene/actor/ghost_2/ghost2_1.png" type="Texture" id=2]
[ext_resource path="res://scene/actor/ghost_2/ghost2_2.png" type="Texture" id=3]
[ext_resource path="res://scene/actor/ghost_2/ghost2_3.png" type="Texture" id=4]
[ext_resource path="res://sound/alert/horror_loop.ogg" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 150.0

[node name="ghost_2" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 2 )
animation = "default"
frame = 1
playing = true

[node name="sensor" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="sensor" index="0"]

shape = SubResource( 3 )

[node name="audio" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = 10.0
pitch_scale = 1.0
autoplay = true
max_distance = 150.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="body" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="body" index="0"]

shape = SubResource( 1 )

[connection signal="body_entered" from="sensor" to="." method="_on_sensor_body_entered"]

[connection signal="body_exited" from="sensor" to="." method="_on_sensor_body_exited"]

[connection signal="body_entered" from="body" to="." method="_on_body_body_entered"]


